--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Padrão</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" type=".text/css" href="./bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
@@ -12,7 +13,7 @@
 </head>
 <body>
 <header class="topo shadow-sm">
-    <div class="container"></div>
+    <div class="container">
         <div class="row">
             <div class="col-4">
                 <img src="./img/logo.png" alt="Logotipo">
@@ -26,16 +27,27 @@
                     <a class="nav-link" href="#">Contatos</a>
                     <a class="btn btn-success rounded-pill " href="#">(11) 9836-9800</a>
                 </nav>
-
-
             </div>
         </div>
 </header>
 
-    <section>
-
+    <section class="banner-topo">
+        <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <img src="./img/roberto.png" class="img-destaque d-block mx-auto mt-3" alt="professor Felipe">
+            </div>
+            <div class="col-6 align-self-center">
+                <h1>Café do Surf</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Animi aliquid tenetur, illum ullam debitis dolores nulla. 
+                Sunt laudantium eius, sapiente aliquam cupiditate vero magni ex doloremque voluptates perspiciatis quibusdam aspernatur.</p>
+                <a href="#" class="btn btn-primary rounded-pill btn-lg">Saiba Mais</a>
+            </div>
+            </div>
+        </div>
     </section>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+   
 </body>
 </html>
