--- a/index.html
+++ b/index.html
@@ -38,12 +38,43 @@
                 <img src="./img/roberto.png" class="img-destaque d-block mx-auto mt-3" alt="professor Felipe">
             </div>
             <div class="col-6 align-self-center">
-                <h1>Café do Surf</h1>
+                <h1 class="cor-tema">Café do Surf</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Animi aliquid tenetur, illum ullam debitis dolores nulla. 
                 Sunt laudantium eius, sapiente aliquam cupiditate vero magni ex doloremque voluptates perspiciatis quibusdam aspernatur.</p>
                 <a href="#" class="btn btn-primary rounded-pill btn-lg">Saiba Mais</a>
             </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="destaque">
+        <div class="container mt-4">
+            <div class="row">
+                
+                <div class="col-3 text-center">
+                    <img src="./img//brain.png" class="d-block mx-auto" alt="info1" >
+                    <h4 class="cor-tema mt-3">Título</h4>
+                    <p>aaaaaaaaaaaaa</p>
+                </div>
+                <div class="col-3 text-center">
+                    <img src="./img//brain.png" class="d-block mx-auto" alt="info1" >
+                    <h4 class="cor-tema mt-3">Título</h4>
+                    <p>aaaaaaaaaaaaa</p>
+                </div>
+
+                <div class="col-3 text-center">
+                    <img src="./img//brain.png" class="d-block mx-auto" alt="info1" >
+                    <h4 class="cor-tema mt-3">Título</h4>
+                    <p>aaaaaaaaaaaaa</p>
+                </div>
+
+                <div class="col-3 text-center">
+                    <img src="./img//brain.png" class="d-block mx-auto" alt="info1" >
+                    <h4 class="cor-tema mt-3">Título</h4>
+                    <p>aaaaaaaaaaaaa</p>
+                </div>
+                </div>
             </div>
         </div>
     </section>
