--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <div class="container">
         <div class="row">
             <div class="col-6">
-                <img src="./img/roberto.png" class="img-destaque d-block mx-auto mt-3" alt="professor Felipe">
+                <img src="./img/linkedin2.png" class="img-destaque d-block mx-auto mt-3" alt="professor Felipe">
             </div>
             <div class="col-6 align-self-center">
-                <h1 class="cor-tema">Café do Surf</h1>
+                <h1 class="cor-tema">Aulas de Desenvolvimento</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Animi aliquid tenetur, illum ullam debitis dolores nulla. 
                 Sunt laudantium eius, sapiente aliquam cupiditate vero magni ex doloremque voluptates perspiciatis quibusdam aspernatur.</p>
@@ -49,29 +49,29 @@
     </section>
 
     <section class="destaque">
-        <div class="container mt-4">
+        <div class="container mt-4 mb-5">
             <div class="row">
                 
                 <div class="col-3 text-center">
                     <img src="./img//brain.png" class="d-block mx-auto" alt="info1" >
-                    <h4 class="cor-tema mt-3">Título</h4>
-                    <p>aaaaaaaaaaaaa</p>
+                    <h4 class="cor-tema mt-3">Javascript</h4>
+                    <p>aaaaaaaaaaaaaaaaaaaaaaaaa</p>
                 </div>
                 <div class="col-3 text-center">
                     <img src="./img//brain.png" class="d-block mx-auto" alt="info1" >
-                    <h4 class="cor-tema mt-3">Título</h4>
-                    <p>aaaaaaaaaaaaa</p>
-                </div>
-
-                <div class="col-3 text-center">
-                    <img src="./img//brain.png" class="d-block mx-auto" alt="info1" >
-                    <h4 class="cor-tema mt-3">Título</h4>
-                    <p>aaaaaaaaaaaaa</p>
+                    <h4 class="cor-tema mt-3">Node</h4>
+                    <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
                 </div>
 
                 <div class="col-3 text-center">
                     <img src="./img//brain.png" class="d-block mx-auto" alt="info1" >
-                    <h4 class="cor-tema mt-3">Título</h4>
+                    <h4 class="cor-tema mt-3">HTML/CSS</h4>
+                    <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                </div>
+
+                <div class="col-3 text-center">
+                    <img src="./img//brain.png" class="d-block mx-auto" alt="info1" >
+                    <h4 class="cor-tema mt-3">React</h4>
                     <p>aaaaaaaaaaaaa</p>
                 </div>
                 </div>
@@ -79,6 +79,25 @@
         </div>
     </section>
 
-   
+    <section class="quem-somos">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center mt-5 p-5">
+                    <p class="h1 text-center">Texto em destaque</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Animi aliquid tenetur, illum ullam debitis dolores nulla. 
+                    Sunt laudantium eius, sapiente aliquam cupiditate vero magni ex doloremque voluptates perspiciatis quibusdam aspernatur.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Animi aliquid tenetur, illum ullam debitis dolores nulla. 
+                    Sunt laudantium eius, sapiente aliquam cupiditate vero magni ex doloremque voluptates perspiciatis quibusdam aspernatur.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Animi aliquid tenetur, illum ullam debitis dolores nulla. 
+                        Sunt laudantium eius, sapiente aliquam cupiditate vero magni ex doloremque voluptates perspiciatis quibusdam aspernatur.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 </html>
