--- a/index.html
+++ b/index.html
@@ -55,22 +55,22 @@
                 <div class="col-3 text-center">
                     <img src="./img//brain.png" class="d-block mx-auto" alt="info1" >
                     <h4 class="cor-tema mt-3">Javascript</h4>
-                    <p>aaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                    <p>looooooooooooooooooooo</p>
                 </div>
                 <div class="col-3 text-center">
-                    <img src="./img//brain.png" class="d-block mx-auto" alt="info1" >
+                    <img src="./img//brain.png" class="d-block mx-auto" alt="info2" >
                     <h4 class="cor-tema mt-3">Node</h4>
                     <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
                 </div>
 
                 <div class="col-3 text-center">
-                    <img src="./img//brain.png" class="d-block mx-auto" alt="info1" >
+                    <img src="./img//brain.png" class="d-block mx-auto" alt="info3" >
                     <h4 class="cor-tema mt-3">HTML/CSS</h4>
                     <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
                 </div>
 
                 <div class="col-3 text-center">
-                    <img src="./img//brain.png" class="d-block mx-auto" alt="info1" >
+                    <img src="./img//brain.png" class="d-block mx-auto" alt="info4" >
                     <h4 class="cor-tema mt-3">React</h4>
                     <p>aaaaaaaaaaaaa</p>
                 </div>
@@ -94,6 +94,57 @@
                         Animi aliquid tenetur, illum ullam debitis dolores nulla. 
                         Sunt laudantium eius, sapiente aliquam cupiditate vero magni ex doloremque voluptates perspiciatis quibusdam aspernatur.</p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container mt-5 mb-5">
+            <div class="row">
+                <div1 class="col-4 text-center">
+                    <div class="card1" style="width: 18rem;">
+                        <img class="card-img-top" src="./img/2dev.JPG" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Projeto React</h5>
+                          <p class="card-text">Projeto de Front-end com utilização de React e seus componentes.</p>
+                          <a href="https://github.com/felipemontenegror/2devconnector" class="btn btn-primary">Entrar no Projeto</a>
+                        </div>
+                      </div>
+                </div1>
+
+                <div2 class="col-4 text-center">
+                    <div class="card2" style="width: 18rem;">
+                        <img class="card-img-top" src="./img/github.png" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Repositório de Projetos</h5>
+                          <p class="card-text">Repositório GitHub contendo todos os meus projetos</p>
+                          <a href="https://github.com/felipemontenegror" class="btn btn-primary">Entrar no Projeto</a>
+                        </div>
+                      </div>
+                </div2>
+
+                <div3 class="col-4 text-center">
+                    <div class="card1" style="width: 18rem;">
+                        <img class="card-img-top" src="./img/node3.jpg" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Projeto Node</h5>
+                          <p class="card-text">Projeto de Back-end com utilização de Node JS e seus componentes.</p>
+                          <a href="https://github.com/felipemontenegror/kebab-cms" class="btn btn-primary">Entrar no Projeto</a>
+                        </div>
+                      </div>
+                </div3>
+
+
+                <section class="banner-baixo">
+                    <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h1 class="text-center">Volte Sempre!</h1>
+                        </div>
+                    </div>
+                </section>
+                
+
             </div>
         </div>
     </section>
