--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <nav class="nav justify-content-end">
                     <a class="nav-link" href="#home">Home</a>
                     <a class="nav-link" href="#quem">Quem sou</a>
-                    <a class="nav-link" href="#cursos">Cursos realizados</a>
+                    <a class="nav-link" href="#cursos">Projetos realizados</a>
                     <a class="nav-link" href="#contatos">Contatos</a>
-                    <a class="btn btn-success rounded-pill " href="http://api.whatsapp.com/send?phone=5521981656464">(21) 98165-6464</a>
+                    <a class="btn btn-success rounded-pill bi bi-whatsapp" href="http://api.whatsapp.com/send?phone=5521981656464"> WhatsApp</a>
                 </nav>
             </div>
         </div>
@@ -38,10 +38,10 @@
                 <img src="./img/linkedin2.png" class="img-destaque d-block mx-auto mt-3" alt="professor Felipe">
             </div>
             <div class="col-6 align-self-center">
-                <h1 class="cor-tema">Aulas de Desenvolvimento</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Animi aliquid tenetur, illum ullam debitis dolores nulla. 
-                Sunt laudantium eius, sapiente aliquam cupiditate vero magni ex doloremque voluptates perspiciatis quibusdam aspernatur.</p>
+                <h1 class="cor-tema">Felipe Montenegro</h1>
+                <h4 class="cor-tema2">Desenvolvedor Web</h4>
+                <p>Desenvolvedor com foco em NodeJS, seus frameworks e banco de dados, além de criação de páginas web, utilizando Javascript, HTML5, CSS3 e Bootstrap, seguindo padrões de usabilidade e estilo.</p>
+                <p>Venha conhecer mais do meu trabalho!</p>
                 <a href="https://www.linkedin.com/in/felipe-montenegro-ribeiro/" class="btn btn-primary rounded-pill btn-lg">Saiba Mais</a>
             </div>
             </div>
@@ -49,30 +49,30 @@
     </section>
 
     <section class="destaque" id="home">
-        <div class="container mt-4 mb-5">
+        <div class="container mt-4 mb-4">
             <div class="row">
                 
                 <div class="col-3 text-center">
                     <img src="./img//brain.png" class="d-block mx-auto" alt="info1" >
                     <h4 class="cor-tema mt-3">Javascript</h4>
-                    <p>looooooooooooooooooooo</p>
+                    <p>Conhecimento e estudo contínuo no Javasscript puro, a fim de transitar com facilidade pelos frameworks de mercado.</p>
                 </div>
                 <div class="col-3 text-center">
                     <img src="./img//brain.png" class="d-block mx-auto" alt="info2" >
                     <h4 class="cor-tema mt-3">Node</h4>
-                    <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                    <p>Conhecimento e aprofundamento contínuo na multiplataforma NodeJS, uma das mais requisitas atribuições para desenvolvimento Backend Web</p>
                 </div>
 
                 <div class="col-3 text-center">
                     <img src="./img//brain.png" class="d-block mx-auto" alt="info3" >
                     <h4 class="cor-tema mt-3">HTML/CSS</h4>
-                    <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                    <p>Tradicionais códigos de marcação e estilo para compor e sustentar elementos de páginas web</p>
                 </div>
 
                 <div class="col-3 text-center">
                     <img src="./img//brain.png" class="d-block mx-auto" alt="info4" >
                     <h4 class="cor-tema mt-3">React</h4>
-                    <p>aaaaaaaaaaaaa</p>
+                    <p>Aprendizado contínuo no framework mais requisitado do mercado, para aplicações de SPA robustas e modulares. </p>
                 </div>
                 </div>
             </div>
@@ -82,17 +82,11 @@
     <section class="quem-somos" id="quem">
         <div class="container">
             <div class="row">
-                <div class="col-12 text-center mt-4 p-5">
-                    <p class="h1 text-center mb-5">Texto em destaque</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Animi aliquid tenetur, illum ullam debitis dolores nulla. 
-                    Sunt laudantium eius, sapiente aliquam cupiditate vero magni ex doloremque voluptates perspiciatis quibusdam aspernatur.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Animi aliquid tenetur, illum ullam debitis dolores nulla. 
-                    Sunt laudantium eius, sapiente aliquam cupiditate vero magni ex doloremque voluptates perspiciatis quibusdam aspernatur.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Animi aliquid tenetur, illum ullam debitis dolores nulla. 
-                        Sunt laudantium eius, sapiente aliquam cupiditate vero magni ex doloremque voluptates perspiciatis quibusdam aspernatur.</p>
+                <div class="col-12 text-center mt-3 p-5">
+                    <p class="h1 text-center mb-5">Minha História</p>
+                    <p>Meu nome é Felipe Montengro, carioca, formado em Gestão da Tecnologia da informação, comecei minha experiencia profissional em 2010, atuando como analistá técnico de Pré venda, na área de infraestrutura de TI, participando diretamente com desenhos técnicos de projetos, interagindo com o cliente e com os maiores fornecedores do mercado.</p>
+                    <p>Após longo tempo atuando nessa área e mais algumas experiencias com suporte técnico de infraestrutura e consultor comercial de Tecnologia, decidi migrar para área de Desenvolvimento Web, onde em Julho de 2020, comecei o Bootcamp Full Stack Mern, no instituto Infnet.</p>
+                    <p>Desde então, participei de projetos pessoais com tecnologias utilizando Javascript, atuando no Backend com NodeJS, utilizando framework ExpressJS para gerenciar requisições HTTP, integrando com banco de dados não relacional e quando necessário, uso de armazenamendo AWS. No Frontend, utilização do Javascript vailla, com HTML, CSS, Bootstrap e React em aplicações mais robustas. Boas noções de UX e conhecimento em medologia Ágil.</p>
                 </div>
             </div>
         </div>
@@ -117,7 +111,7 @@
                         <img class="card-img-top" src="./img/github.png" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Repositório de Projetos</h5>
-                          <p class="card-text">Repositório GitHub contendo todos os meus projetos</p>
+                          <p class="card-text">Repositório GitHub contendo todos os meus projetos!</p>
                           <a href="https://github.com/felipemontenegror" class="btn btn-primary">Entrar no Projeto</a>
                         </div>
                       </div>
@@ -151,7 +145,7 @@
 
                             <div class="col-3">
                                 <h4>Endereço:</h4>
-                                <p>Tijuca - Rio de Janeiro - BR</p>
+                                <p>Tijuca - Rio de Janeiro - Brasil</p>
                             </div>
 
                             <div class="col-3">
