--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
         <div class="container mt-4 mb-4">
             <div class="row">
                 
-                <div class="col-6 col-sm-3 text-center">
+                <div class="col-6 col-md-4 text-center">
                     <img src="./img//brain.png" class="d-block mx-auto" alt="info1" >
                     <h4 class="cor-tema mt-3">Javascript</h4>
                     <p>Conhecimento e estudo contínuo no Javasscript puro, a fim de transitar com facilidade pelos frameworks de mercado.</p>
                 </div>
-                <div class="col-6 col-sm-3 text-center">
+                <div class="col-6 col-md-4 text-center">
                     <img src="./img//brain.png" class="d-block mx-auto" alt="info2" >
                     <h4 class="cor-tema mt-3">Node</h4>
                     <p>Conhecimento e aprofundamento contínuo na multiplataforma NodeJS, uma das mais requisitas atribuições para desenvolvimento Backend Web</p>
                 </div>
 
-                <div class="col-6 col-sm-3 text-center">
+                <div class="col-6 col-md-4 text-center">
                     <img src="./img//brain.png" class="d-block mx-auto" alt="info3" >
                     <h4 class="cor-tema mt-3">HTML/CSS</h4>
                     <p>Tradicionais códigos de marcação e estilo para compor e sustentar elementos de páginas web</p>
                 </div>
 
-                <div class="col-6 col-sm-3 text-center">
+                <div class="col-6 col-md-4 text-center">
                     <img src="./img//brain.png" class="d-block mx-auto" alt="info4" >
                     <h4 class="cor-tema mt-3">React</h4>
                     <p>Aprendizado contínuo no framework mais requisitado do mercado, para aplicações de SPA robustas e modulares. </p>
